--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Challenge-3</title>
     <link rel="stylesheet" href="main.css" />
     <script src="script.js" defer></script>
     <script
@@ -12,8 +12,9 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKsbQwGim1ZOqiraeQWHgDWAPxA4U5BKY&callback=initMap"
     ></script>
   </head>
-  <body>
+  <body onload="getAPIdata()">
     <h1>My Google Maps</h1>
     <div id="map"></div>
+    <article id="weather"></article>
   </body>
 </html>
