Work with mapbox

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Challenge-3</title>
+    <script src="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.js"></script>
+    <script src="script_mapbx.js" defer></script>
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v1.9.0/mapbox-gl.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="main.css" />
-    <script src="script.js" defer></script>
-    <script
+    <!-- <script src="script_gmaps.js" defer></script> -->
+    <!-- <script
       async
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKsbQwGim1ZOqiraeQWHgDWAPxA4U5BKY&callback=initMap"
-    ></script>
+    ></script> -->
   </head>
   <body onload="getAPIdata()">
     <h1>My Google Maps</h1>
