--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     ></script> -->
   </head>
   <body onload="getAPIdata()">
-    <h1>My Google Maps</h1>
+    <header>
+      <img
+        class="logo"
+        src="images/5842a770a6515b1e0ad75afe.png"
+        alt="SpaceX logo "
+      />
+    </header>
+    <h1>Interplanetary Transport System Map</h1>
     <div class="container">
       <div id="map"></div>
     </div>
@@ -36,5 +43,10 @@
       <article id="weather4"></article>
       <article id="weather5"></article>
     </div>
+    <footer>
+      <div class="legal-container">
+        <p>Raphael Cannavacciuolo @2020 | All rights reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
