--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <div class="container">
       <div id="map"></div>
     </div>
+    <!-- weather of the cities -->
     <div class="weather-container">
       <article id="weather"></article>
       <article id="weather1"></article>
@@ -43,6 +44,7 @@
       <article id="weather4"></article>
       <article id="weather5"></article>
     </div>
+    <!-- footer -->
     <footer>
       <div class="legal-container">
         <p>Raphael Cannavacciuolo @2020 | All rights reserved.</p>
